--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.2.1",
+    "gh-pages": "^5.0.0",
     "lord-icon-element": "^4.1.0",
     "lottie-web": "^5.11.0",
     "react": "^18.2.0",
